--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <header>
         <h1>prime <span>video</span></h1>
-        <h3>Thank you for signing up at prime. Tell us me about your self</h3>
+        <h3>Thank you for signing up to Prime. Tell me more about yourself</h3>
       </header>
 
       <div id="form-container">
@@ -61,37 +61,37 @@
           <div class="input">
             <label for="content">Content Type</label>
             <br />
-            <select name="content" id="content">
+            <select name="content" id="dropdown">
               <option value="Series">Series</option>
               <option value="Movie">Movie</option>
               <option value="Tv Show" selected>Tv Show</option>
             </select>
           </div>
 
-          <div class="input">
-            <label for="check1">Movie Type</label>
+          <div class="input" id="checkbox">
+            <label for="">Movie Type</label>
             <br />
-            <input type="checkbox" name="comedy" id="check1" />
-            <label for="check1">Comedy</label>
+            <input type="checkbox" name="movie1" id="first-check" />
+            <label for="first-check">Comedy</label>
             <br />
-            <input type="checkbox" name="action" id="check2" />
-            <label for="check2">Action</label>
+            <input type="checkbox" name="movie2" id="second-check" />
+            <label for="second-check">Action</label>
             <br />
-            <input type="checkbox" name="romance" id="check3" />
-            <label for="check3">Romance</label>
+            <input type="checkbox" name="movie3" id="third-check" />
+            <label for="third-check">Romance</label>
           </div>
 
-          <div class="input">
-            <label for="gender">Gender</label>
+          <div class="input" id="radio">
+            <label for="">Gender</label>
             <br />
-            <input type="radio" name="gender" id="male" value="Male" />
-            <label for="gender">Male</label>
+            <input type="radio" name="gender" id="first-radio" value="Male" />
+            <label for="first-radio">Male</label>
             <br />
-            <input type="radio" name="gender" id="female" value="Female" />
-            <label for="gender">Female</label>
+            <input type="radio" name="gender" id="second-radio" value="Female" />
+            <label for="second-radio">Female</label>
             <br />
-            <input type="radio" name="gender" id="other" value="Other" />
-            <label for="gender">Other</label>
+            <input type="radio" name="gender" id="third-radio" value="Other" />
+            <label for="third-radio">Other</label>
             <br />
           </div>
 
@@ -105,8 +105,10 @@
             ></textarea>
           </div>
 
-          <br /><br /><br />
-          <div class="input"><input type="submit" value="Send" id="submit"/></div>
+          <div class="form-submit">
+            <!-- <input type="submit" value="Send" id="submit"/> -->
+            <button type="submit" id="form-button">Send</button>
+          </div>
         </form>
       </div>
     </div>
